# tinyvec

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  bench_distance.cpp  bench_flat_index.cpp
docs/: structure.txt
include/tinyvec/core/: types.hpp  vector_ops.hpp
include/tinyvec/index/: flat_index.hpp
scripts/: generate_embeddings.py
src/core/: dispatch.cpp  distance_avx2.cpp  distance_avx512.cpp  distance_scalar.cpp  kernels.hpp
src/index/: flat_index.cpp
tests/: CMakeLists.txt  test_flat_index.cpp  test_vector_ops.cpp
